--- a/styles/HomeBanner.module.css
+++ b/styles/HomeBanner.module.css
@@ -160,9 +160,9 @@
   font-size: 80px;
 }
 
-.lead {
+/* .lead {
   margin: 10px 0 30px 0;
-}
+} */
 
 .lead p {
   font-family: "SF-Light", sans-serif;
