--- a/styles/globals.css
+++ b/styles/globals.css
@@ -120,100 +120,25 @@ p {
   color: var(--main-color);
 }
 
-/* =============font-size============= */
+/* =============Scrollbar============= */
 
-.font-10 {
-  font-size: 10px;
-}
-.font-12 {
-  font-size: 12px;
-}
-.font-13 {
-  font-size: 13px;
-}
-.font-14 {
-  font-size: 14px;
-}
-.font-15 {
-  font-size: 15px;
-}
-.font-16 {
-  font-size: 16px;
-}
-.font-18 {
-  font-size: 18px;
-}
-.font-20 {
-  font-size: 20px;
-}
-.font-22 {
-  font-size: 22px;
-}
-.font-24 {
-  font-size: 24px;
-}
-.font-26 {
-  font-size: 27px;
-}
-.font-30 {
-  font-size: 30px;
-}
-.font-34 {
-  font-size: 34px;
-}
-.font-38 {
-  font-size: 38px;
-}
-.font-40 {
-  font-size: 40px;
-}
-.font-45 {
-  font-size: 45px;
-}
-.font-50 {
-  font-size: 50px;
-}
-.font-60 {
-  font-size: 60px;
-}
-.font-70 {
-  font-size: 70px;
-}
-.font-80 {
-  font-size: 80px;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-/* =============font-weight============= */
-
-.fw-100 {
-  font-weight: 100;
-}
-.fw-200 {
-  font-weight: 200;
-}
-.fw-300 {
-  font-weight: 300;
-}
-.fw-400 {
-  font-weight: 400;
-}
-.fw-500 {
-  font-weight: 500;
-}
-.fw-600 {
-  font-weight: 600;
-}
-.fw-700 {
-  font-weight: 700;
-}
-.fw-800 {
-  font-weight: 800;
-}
-.fw-900 {
-  font-weight: 900;
+::-webkit-scrollbar-track {
+  background: #ffffff;
 }
 
-/* ==========================--========================== */
+::-webkit-scrollbar-thumb {
+  background: #c35427;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ea9c2b;
+}
+
+/* =============Other changes============= */
 
 .digiBanner .form {
   display: flex;
@@ -299,49 +224,6 @@ p {
   color: #fff;
 }
 
-/* ==========================Full-Page-Scroll========================== */
-/* 
-.fp-watermark {
-  display: none;
-}
-
-.fp-scroll-mac #fp-nav ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-  height: 100vh;
-}
-
-.fp-scroll-mac #fp-nav ul li {
-}
-
-.fp-scroll-mac #fp-nav ul li a span {
-  border-radius: 0px;
-  z-index: 1;
-  height: 60px;
-  width: 4px;
-  border: 0;
-  background: #333;
-  transition: all 0.1s ease-in-out;
-  margin: 0;
-}
-
-.fp-scroll-mac #fp-nav ul li a.active span,
-.fp-scroll-mac #fp-nav ul li a.active:hover span,
-.fp-scroll-mac #fp-nav ul li a:hover span {
-  height: 60px;
-  width: 4px;
-  border-radius: 0px;
-  margin: 0;
-}
-
-.fp-scroll-mac #fp-nav ul li a.active span,
-.fp-scroll-mac #fp-nav ul li a:hover span {
-  background-color: #c35427;
-} */
-
 /* ==========================Media-Queries========================== */
 
 @media screen and (max-width: 1199px) {
@@ -355,10 +237,6 @@ p {
   .primary-btn {
     font-size: 16px;
   }
-/*   
-  .fp-section{
-    height: auto !important;
-  } */
 }
 
 @media screen and (max-width: 767px) {
