changes for optimization

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
   width: 100%;
   height: 100vh;
-  background: url(../public/images/footer_bg.png);
+  background: url(https://imagedelivery.net/nJwaBs__P2JfMUeYJ4vmjQ/05141902-6f2d-489e-4ff8-09df8907c700/public);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
