--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,6 +124,7 @@ p {
 
 ::-webkit-scrollbar {
   width: 5px;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
@@ -199,6 +200,69 @@ p {
   opacity: 0;
   transition: all 0.3s;
   filter: brightness(0) invert(1);
+}
+
+/* ========================== */
+
+
+.fp-right ul {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+#fp-nav ul li,
+.fp-slidesNav ul li {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  position: relative;
+}
+
+#fp-nav ul li a,
+.fp-slidesNav ul li a{
+  height: 60px;
+  width: 4px;
+}
+
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+  border-radius: 0% !important;
+  height: 60px !important;
+  width: 4px !important;
+  border: 0 !important;
+  background: #333;
+  margin: 0px !important;
+}
+
+#fp-nav ul li a.active span,
+#fp-nav ul li:hover a.active span{
+  height: 60px;
+  width: 4px;
+  margin: 0px;
+  border-radius: 0%;
+  border: 0;
+  background-color: #c35427;
+}
+
+.fp-watermark{
+  display: none;
+}
+
+ .fp-section{
+    height: auto !important;
+  }
+  
+
+@media screen and (max-width: 991px) {
+  #fp-nav{
+    display: none;
+  }
+  
 }
 
 /* ========================== */
