--- a/styles/DigiMarktngServics.module.css
+++ b/styles/DigiMarktngServics.module.css
@@ -1,5 +1,8 @@
 .digiService {
-  padding: 0 0 50px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .tabsRow {
@@ -70,6 +73,12 @@
 /* ==========================Media-Queries========================== */
 
 @media screen and (max-width: 991px) {
+
+  .digiService {
+    height: auto;
+    padding: 50px 0;
+  }
+
   .navTabs li a {
     padding: 20px;
   }
