--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
   width: 100%;
   height: 100vh;
-  background: url(../public/images/contact-bg.avif);
+  background: url(../public/images/footer_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
