--- a/styles/HomeBanner.module.css
+++ b/styles/HomeBanner.module.css
@@ -1,31 +1,3 @@
-/* .pagination {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 20px;
-  width: 20px;
-  height: auto;
-  z-index: 9;
-  padding-left: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.pagination a.active {
-  background-color: #c35427;
-}
-.pagination a {
-  width: 4px;
-  height: 60px;
-  display: block;
-  background-color: #efefef;
-  cursor: pointer;
-} */
-
 .banner {
   width: 100%;
   height: 100vh;
@@ -161,10 +133,6 @@
   font-size: 80px;
 }
 
-/* .lead {
-  margin: 10px 0 30px 0;
-} */
-
 .lead p {
   font-family: "SF-Light", sans-serif;
   font-size: 20px;
@@ -218,22 +186,37 @@
     font-size: 28px;
   }
 }
+
+@media screen and (max-width: 1299px) {
+  
+  .bannerBody .social {
+    top: 120px;
+  }
+
+  .shadedText {
+    top: 29%;
+  }
+
+  .bannerText {
+    top: 27%;
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .bannerText {
     left: 25%;
   }
 }
 
-@media screen and (min-width: 992px) {
-  .social {
-    top: 55px;
-  }
-}
 
 @media screen and (max-width: 991px) {
   .shadedText {
     left: -130px;
-    top: 26%;
+    top: 38%;
+  }
+
+  .bannerBody .social {
+    top: 320px;
   }
 
   .shadedText h1 {
@@ -270,7 +253,7 @@
   }
 
   .bannerText {
-    top: 30%;
+    top: 38%;
     left: 25%;
   }
 
