--- a/styles/BusinessServics.module.css
+++ b/styles/BusinessServics.module.css
@@ -1,5 +1,5 @@
 .busIntService {
-  padding: 0 0 50px 0;
+  padding: 50px 0 50px 0;
   display: flex;
   align-items: center;
   justify-content: center;
