--- a/styles/Career.module.css
+++ b/styles/Career.module.css
@@ -28,6 +28,10 @@
   font-size: 24px;
 }
 
+.form{
+  margin-top: 20px;
+}
+
 
 /* ==========================Media-Queries========================== */
 
