--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -28,7 +28,7 @@
   font-family: "SF-Light", sans-serif;
   font-size: 20px;
   line-height: 1.2;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   color: #212529;
 }
 
@@ -59,6 +59,10 @@
   color: #e87341;
 }
 
+.infoLinks a:hover svg {
+  color: #2c2c2c;
+}
+
 .contactForm input,
 .contactForm textarea {
   font-size: 18px;
@@ -79,6 +83,15 @@
 .contactForm textarea {
   height: 150px;
   resize: none;
+}
+
+.address a {
+  align-items: flex-start;
+}
+
+.address svg {
+  font-size: 20px;
+  margin-top: 4px;
 }
 
 /* ==========================Media-Queries========================== */
