--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -51,13 +51,13 @@
 
 .navTabs {
   justify-content: space-between;
-  row-gap: 10px;
+  row-gap: 20px;
   border: none;
 }
 
 .navTabs li {
   width: 48%;
-  height: 100%;
+  height: 200px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 24%);
   margin: 0;
@@ -68,6 +68,8 @@
   border: 0px !important;
   border-radius: 0px !important;
   text-align: center;
+  padding: 20px;
+  height: 100%;
 }
 
 .tabsPan img {
@@ -78,8 +80,8 @@
 
 .tabsPan h5 {
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 600;
   color: #2c2c2c;
   line-height: 24px;
   letter-spacing: 1px;
@@ -96,11 +98,11 @@
 }
 
 .tabPanContent h3 {
-  font-size: 40px;
+  font-size: 34px;
+  line-height: 44px;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   color: #2c2c2c;
-  line-height: 1;
   margin-bottom: 10px;
   text-align: center;
 }
@@ -209,5 +211,9 @@
 
   .servTxt{
     display: none;
+  }
+
+  .navTabs li {
+    height: 100%;
   }
 }
