--- a/styles/TranscriptionBanner.module.css
+++ b/styles/TranscriptionBanner.module.css
@@ -17,8 +17,10 @@
 
 .transBanner h1 {
   position: relative;
-  font-size: 65px;
+  font-size: 55px;
+  line-height: 60px;
   font-weight: 400;
+  margin-bottom: 10px;
   font-family: "SF-Regular", sans-serif;
 }
 
@@ -29,11 +31,13 @@
   -webkit-text-fill-color: transparent;
   letter-spacing: 1px;
   font-size: 65px;
+  line-height: 75px;
+  display: block;
 }
 
 .transBanner p {
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 500;
   line-height: 26px;
   color: #5f5f5f;
