--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -180,8 +180,16 @@
   .serviceHeader p {
     font-size: 13px;
   }
+  
+  .tabsPan img{
+    display: none;
+  }
 
-  .tabsPan h5,
+  .tabsPan h5{
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+
   .tabsPan p {
     display: none;
   }
@@ -214,6 +222,12 @@
   }
 
   .navTabs li {
-    height: 100%;
+    height: 85px;
+  }
+
+  .navTabs li a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
