--- a/styles/globals.css
+++ b/styles/globals.css
@@ -319,6 +319,10 @@ p {
   .fp-section {
     height: auto !important;
   }
+
+  .mbl-none{
+    display: none;
+  }
 }
 
 @media screen and (max-width: 767px) {
