--- a/styles/MngdITServicsTab.module.css
+++ b/styles/MngdITServicsTab.module.css
@@ -80,21 +80,25 @@
     height: auto;
   }
 
-  .navTabs li a {
-    padding: 20px 0;
+  .deskTop {
+    display: none;
   }
 
-  .tabPanContent {
-    margin-top: 0px;
-    padding-left: 0px;
+  .tabPanContent img {
+    margin: 0 0 20px 0;
   }
 
   .tabPanContent h3 {
     font-size: 30px;
+    margin-top: 10px;
   }
 
   .tabPanContent p {
-    font-size: 14px;
+    font-size: 16px;
+  }
+
+  .tabPanContent {
+    padding-left: 0px;
   }
 }
 
@@ -103,22 +107,7 @@
     display: none;
   }
 
-  .tabsPan h5 {
-    font-size: 15px;
-    margin-bottom: 0px;
-  }
-
   .tabPanContent h3 {
     font-size: 20px;
-  }
-
-  .tabPanContent p {
-    margin-bottom: 0px;
-    font-size: 13px;
-  }
-
-  .navTabs li {
-    width: 100%;
-    height: 100%;
   }
 }
