--- a/styles/TranscriptionServics.module.css
+++ b/styles/TranscriptionServics.module.css
@@ -73,16 +73,25 @@
 /* ==========================Media-Queries========================== */
 
 @media screen and (max-width: 991px) {
-  .navTabs li a {
-    padding: 20px;
+  .transService .deskTop {
+    display: none;
+  }
+
+  .tabPanContent img {
+    margin: 0 0 20px 0;
   }
 
   .tabPanContent h3 {
     font-size: 30px;
+    margin-top: 10px;
   }
 
   .tabPanContent p {
-    font-size: 13px;
+    font-size: 16px;
+  }
+
+  .tabPanContent {
+    padding-left: 0px;
   }
 }
 
@@ -95,30 +104,12 @@
     display: none;
   }
 
-  .tabsPan h5 {
-    font-size: 15px;
-    margin-bottom: 0px;
-  }
-
   .tabPanContent img {
-    margin: 0 0 30px 0;
+    margin: 0 0 10px 0;
     width: 50px;
   }
 
   .tabPanContent h3 {
     font-size: 20px;
-  }
-
-  .tabPanContent p {
-    margin-bottom: 0px;
-    font-size: 13px;
-  }
-
-  .navTabs li {
-    width: 100%;
-  }
-
-  .navTabs li a {
-    padding: 20px 0;
   }
 }
