--- a/styles/HomeBanner.module.css
+++ b/styles/HomeBanner.module.css
@@ -95,14 +95,14 @@
   border: 4px solid #f3ddd3;
 }
 
-.searchIcon span {
+.searchIcon a {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
 
-.searchIcon span img {
+.searchIcon a img {
   width: 20px;
   height: 20px;
   color: #141414;
@@ -247,7 +247,7 @@
     width: 25px;
   }
 
-  .searchIcon span img {
+  .searchIcon a img {
     width: 15px;
     height: 15px;
   }
