--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -22,7 +22,7 @@
 }
 
 .serviceHeader h2 {
-  padding-top: 20px;
+  /* padding-top: 20px; */
   font-size: 60px;
   font-weight: 400;
   font-family: "SF-Regular", sans-serif;
